--- a/Lesson_04-Express.js/views/add-product.html
+++ b/Lesson_04-Express.js/views/add-product.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add product</title>
+    <link rel="stylesheet" href="/css/main.css"
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Shop</a></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a href="/">Shop</a></li>
+                <li class="main-header__item"><a class="active" href="/admin/add-product">Add Product</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <form action="/admin/add-product" method="POST">
+    <main class="product-form">
+        <form class="form-control" action="/admin/add-product" method="POST">
+            <label>Enter New Product</label>
             <input
             type="text"
             name="title"
